# qr-portal2d

./: Cargo.toml  LICENSE-MIT  README.md  index.css  index.html
src/: app.rs  color.rs  lib.rs  main.rs
src/components/: color_input.rs  error_popup.rs  file_input.rs  mod.rs  qr_output  qr_output.rs  text_input.rs
