[package]
name = "qr-portal2d"
version = "1.0.0"
edition = "2021"
description = "Simple browser QR code generator"
readme = "README.md"
repository = "https://github.com/RainbowAsteroids/qr-portal2d"
license = "MIT OR Apache-2.0"
keywords = ["qr"]
categories = ["wasm", "qr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.21.0"
gloo = "0.8.0"
gloo-console = "0.2.3"
image = "0.23"
qrcode = "0.12.0"
wasm-bindgen = "0.2.83"
web-sys = { version="0.3.60", features=["HtmlAnchorElement"] }
yew = { version="0.20", features=["csr"] }
